--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=Customer-service
-server.port=8082
-spring.datasource.url=jdbc:h2:mem:customers-db
+spring.application.name=inventory-service
+server.port=8083
+spring.datasource.url=jdbc:h2:mem:inventory-db
 spring.h2.console.enabled=true
 spring.cloud.config.discovery.enabled=false
 spring.cloud.config.enabled=false
